<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="196dp"
        android:layout_marginBottom="476dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="100dp">

        <TextView
            android:id="@+id/lblP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Palabra 1"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="248dp" />

        <EditText
            android:id="@+id/txtPalabra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="248dp" />

        <TextView
            android:id="@+id/lblP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Palabra 2"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="305dp" />

        <EditText
            android:id="@+id/txtPalabra2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="305dp" />

        <Button
            android:id="@+id/btnComparar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comparar"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="417dp" />

        <TextView
            android:id="@+id/lblResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="...Resultado..."
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="551dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>